5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1635_2447.log
== TEST (2019-04-08 14:59:05) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(round(mensagem, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:59:16) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(round(mensagem, 2))

-- EXECUTION TIME:
0.115491
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 7, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:02:03) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:03:25) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(round(mensagem, 2))
print(round(x, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:03:31) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(round(mensagem, 2))
print(round(x, 2))

-- EXECUTION TIME:
0.147204
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:03:58) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:04) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:15) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:19) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:14:08) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:14:10) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
print(mensagem)
print(round(x, 2))

-- EXECUTION TIME:
0.188903
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:19) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))
print(round(y, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:21) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))
print(round(y, 2))

-- EXECUTION TIME:
0.157338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 11, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:22) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))
print(round(y, 2))

-- EXECUTION TIME:
0.21609
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 11, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:24) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))
print(round(y, 2))

-- EXECUTION TIME:
0.119225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 11, in <module>
    print(round(y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:31) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))


-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:32) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))


-- EXECUTION TIME:
0.134298
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:41) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x,y, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(x,y, 2))
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:42) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x,y, 2))


-- EXECUTION TIME:
0.125469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 10, in <module>
    print(round(x,y, 2))
NameError: name 'y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:15:48) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))


-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:15:49) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
if (preco > pagamento):
	x = preco - pagamento
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	y = 0
print(mensagem)
print(round(x, 2))


-- EXECUTION TIME:
0.146418
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:18:45) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	
print(mensagem)
print(round(x, 2))


-- OUTPUT:
Falta X
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:18:46) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))
x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	
	mensagem = "Falta X"
else:
	mensagem = "Troco de Y"
	
print(mensagem)
print(round(x, 2))


-- EXECUTION TIME:
0.210454
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de Y
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:23:17) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))


if (preco > pagamento):
	x = preco - pagamento

	mensagem = "Falta {0}".format(x)
else:
	y = pagamento - preco
	mensagem = "Troco de {0}".format(y)
	
print(mensagem)
print(round(x, 2))


-- EXECUTION TIME:
0.120339
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:23:20) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))


if (preco > pagamento):
	x = preco - pagamento

	mensagem = "Falta {0}".format(x)
else:
	y = pagamento - preco
	mensagem = "Troco de {0}".format(y)
	
print(mensagem)
print(round(x, 2))


-- OUTPUT:
Falta 26.0
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:26:11) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, x)
else:
	mensagem = "Troco de "
	print(mensagem, y)
	

print(round(x, 2))


-- EXECUTION TIME:
0.137883
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:13) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, x)
else:
	mensagem = "Troco de "
	print(mensagem, y)
	

print(round(x, 2))


-- OUTPUT:
Falta  26.0
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:26:40) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, y)
else:
	mensagem = "Troco de "
	print(mensagem, x)
	

print(round(x, 2))


-- EXECUTION TIME:
0.132879
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  -26.0
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  -28.0
-28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:26:41) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, y)
else:
	mensagem = "Troco de "
	print(mensagem, x)
	

print(round(x, 2))


-- OUTPUT:
Falta  -26.0
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:12) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, y)
	print(round(y, 2))
else:
	mensagem = "Troco de "
	print(mensagem, x)
	print(round(x, 2))
	




-- OUTPUT:
Falta  -26.0
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:27:55) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, x)
	print(round(x, 2))
else:
	mensagem = "Troco de "
	print(mensagem, y)
	print(round(y, 2))
	




-- OUTPUT:
Falta  26.0
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:28:03) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, x)
	print(round(x, 2))
else:
	mensagem = "Troco de "
	print(mensagem, y)
	print(round(y, 2))
	




-- EXECUTION TIME:
0.172254
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:28:38) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, x)
	print(round(x, 2))
else:
	mensagem = "Troco de "
	print(mensagem, y)
	print(round(y, 2))
	




-- OUTPUT:
Falta  26.0
26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:12) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2))
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))
	




-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:22) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2))
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))
	




-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:31) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2))
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))
	




-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:30:32) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2))
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))
	




-- EXECUTION TIME:
0.174791
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:30:50) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2),5)
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))
	




-- OUTPUT:
Falta  26.0 5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:42:46) 
-- CODE:
preco = float(input("Qual o valor 1 ?"))
pagamento = float(input("Qual o valor 2 ?"))

x = preco - pagamento
y = pagamento - preco
if (preco > pagamento):
	mensagem = "Falta "
	print(mensagem, round(x,2))
else:
	mensagem = "Troco de "
	print(mensagem, round (y, 2))


-- EXECUTION TIME:
0.164218
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
